// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeCreatingModal SourceControlTree renders when "searchValue" property is set to empty string 1`] = `
<Fragment>
  <Tree
    components={
      Object {
        "IndicatorsContainer": [Function],
        "LabelContainer": [Function],
        "MenuContainer": [Function],
        "Node": [Function],
        "SearchInput": [Function],
        "Tree": [Function],
        "ValueContainer": [Function],
      }
    }
    getNodeLabel={[Function]}
    getNodeValue={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    isDisabled={[Function]}
    loading={false}
    multiple={false}
    onSelect={[Function]}
    options={Object {}}
    searchValue=""
    showMore={false}
    value={null}
    values={Array []}
  />
  <CreationPanel
    className=""
    onClick={[MockFunction]}
    text="Добавить константу"
  />
</Fragment>
`;

exports[`AttributeCreatingModal SourceControlTree renders when "searchValue" property is set to not empty string 1`] = `
<Fragment>
  <div
    className="searchValue"
  >
    <span>
      Содержащее: 
    </span>
    test
  </div>
  <Tree
    components={
      Object {
        "IndicatorsContainer": [Function],
        "LabelContainer": [Function],
        "MenuContainer": [Function],
        "Node": [Function],
        "SearchInput": [Function],
        "Tree": [Function],
        "ValueContainer": [Function],
      }
    }
    getNodeLabel={[Function]}
    getNodeValue={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    isDisabled={[Function]}
    loading={false}
    multiple={false}
    onSelect={[Function]}
    options={Object {}}
    searchValue="test"
    showMore={false}
    value={null}
    values={Array []}
  />
  <div
    className="searchInfo"
  >
    Найдено 0 из 0
  </div>
</Fragment>
`;
